--- a/Mandel.bib
+++ b/Mandel.bib
@@ -30662,3 +30662,91 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Schmidt:2020,
+       author = {{Schmidt}, Patricia},
+        title = "{Gravitational Waves from Binary Black Hole Mergers: Modelling and Observations}",
+      journal = {Frontiers in Astronomy and Space Sciences},
+     keywords = {gravitational waves, compact binaries, black holes, modelling, Observations},
+         year = 2020,
+        month = jun,
+       volume = {7},
+          eid = {28},
+        pages = {28},
+          doi = {10.3389/fspas.2020.00028},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020FrASS...7...28S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ashton:2019,
+       author = {{Ashton}, Gregory and {H{\"u}bner}, Moritz and {Lasky}, Paul D. and {Talbot}, Colm and {Ackley}, Kendall and {Biscoveanu}, Sylvia and {Chu}, Qi and {Divakarla}, Atul and {Easter}, Paul J. and {Goncharov}, Boris and {Hernandez Vivanco}, Francisco and {Harms}, Jan and {Lower}, Marcus E. and {Meadors}, Grant D. and {Melchor}, Denyz and {Payne}, Ethan and {Pitkin}, Matthew D. and {Powell}, Jade and {Sarin}, Nikhil and {Smith}, Rory J.~E. and {Thrane}, Eric},
+        title = "{BILBY: A User-friendly Bayesian Inference Library for Gravitational-wave Astronomy}",
+      journal = {\apjs},
+     keywords = {gravitational waves, methods: data analysis, methods: statistical, stars: black holes, stars: neutron, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2019,
+        month = apr,
+       volume = {241},
+       number = {2},
+          eid = {27},
+        pages = {27},
+          doi = {10.3847/1538-4365/ab06fc},
+archivePrefix = {arXiv},
+       eprint = {1811.02042},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJS..241...27A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{FishbachHolz:2020,
+       author = {{Fishbach}, Maya and {Holz}, Daniel E.},
+        title = "{Minding the Gap: GW190521 as a Straddling Binary}",
+      journal = {\apjl},
+     keywords = {Astrophysical black holes, Gravitational waves, Gravitational wave astronomy, Bayesian statistics, Intermediate-mass black holes, 98, 678, 675, 1900, 816, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2020,
+        month = dec,
+       volume = {904},
+       number = {2},
+          eid = {L26},
+        pages = {L26},
+          doi = {10.3847/2041-8213/abc827},
+archivePrefix = {arXiv},
+       eprint = {2009.05472},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...904L..26F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{NitzCapano:2021,
+       author = {{Nitz}, Alexander H. and {Capano}, Collin D.},
+        title = "{GW190521 May Be an Intermediate-mass Ratio Inspiral}",
+      journal = {\apjl},
+     keywords = {Gravitational waves, 678, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = jan,
+       volume = {907},
+       number = {1},
+          eid = {L9},
+        pages = {L9},
+          doi = {10.3847/2041-8213/abccc5},
+archivePrefix = {arXiv},
+       eprint = {2010.12558},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...907L...9N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Olsen:2021,
+       author = {{Olsen}, Seth and {Roulet}, Javier and {Chia}, Horng Sheng and {Dai}, Liang and {Venumadhav}, Tejaswi and {Zackay}, Barak and {Zaldarriaga}, Matias},
+        title = "{Mapping the Likelihood of GW190521 with Diverse Mass and Spin Priors}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology, Physics - Data Analysis, Statistics and Probability},
+         year = 2021,
+        month = jun,
+          eid = {arXiv:2106.13821},
+        pages = {arXiv:2106.13821},
+archivePrefix = {arXiv},
+       eprint = {2106.13821},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210613821O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
