--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -144,15 +144,28 @@ We summarize the existing observations of merging binary black holes and closely
 
 
 \subsubsection{The confirmed detections to date}
-During its first observing run, lasting from September of 2015 through January of 2016, the \ilya{advanced} LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes for the remainder of this article.
+During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020}.  
+
+
+Meanwhile, the observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  Another confident detection of a binary neutron star merger, GW190425 \citep{GW190425}, as well as two mergers of neutron stars with black holes,  GW200105 and GW200115 \citep{GW200105}, did not yield electromagnetic counterparts.  
+We shall focus on binary black holes for the remainder of this article.
 
 \subsubsection{Information encoded in gravitational-wave signals}
-The gravitational-wave signature encodes the properties of the merging binary black holes: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2014,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy dataset.   For the heaviest black\ilya{-}hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately because the latest stage of the merger waveform, the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of current gravitational-wave detectors.  For most black-hole binaries, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of frequency evolution during the earlier inspiral phase of the waveform.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the gravitational-wave phase evolution during inspiral at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black\ilya{-}hole spins \citep[e.g.,][]{PoissonWill:1995}.  
+The gravitational-wave signature encodes the properties of the merging binary black holes: the component masses and spins (see, e.g., \cite{Schmidt:2020} for a review of gravitational waveform modelling, a topic we will not touch on here). Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2014,GW150914:PE, Ashton:2019}.  
 
-\subsubsection{Information extracted from the observed gravitational-wave signals}
-We list the parameters of the black\ilya{-}hole binaries observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
+However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy dataset.   For the heaviest black-hole binaries such as GW150914 and GW190521, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately because the latest stage of the merger waveform, the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of current gravitational-wave detectors.  For lower-mass black-hole binaries, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of frequency evolution during the earlier inspiral phase of the waveform.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the gravitational-wave phase evolution during inspiral at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black-hole spins \citep[e.g.,][]{PoissonWill:1995,Hannam:2013}.  
 
-\textbf{Masses:} The individual black\ilya{-}hole masses span a range from $\ilya{\simeq} 7 M_\odot$ to $\ilya{\simeq} 35 M_\odot$.  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  While the existing observations are not sufficient to accurately determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of \ilya{$M^{-2.3_{-1.4}^{+1.3}}$} \citep{BBH:O1,GW170104}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates, which are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW170104}.  
+\subsubsection{Information extracted from the observed gravitational-wave signals}\label{sec:GWevents}
+%We list the parameters of the black\ilya{-}hole binaries observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
+
+\textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  While the existing observations are not sufficient to accurately determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of \ilya{$M^{-2.3_{-1.4}^{+1.3}}$} \citep{BBH:O1,GW170104}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates, which are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW170104}.   
+
+\ref{fig:BHmasses}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.99\textwidth]{Graveyard.png}
+	\caption{\label{fig:BHmasses}  \ilya{To update} The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
+\end{figure}
 
 \textbf{Mass Ratios:} While all binary black holes observed to date are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
 
@@ -183,12 +196,6 @@ X-ray binaries containing accreting black holes can be divided into two categori
 
 \textbf{Black\ilya{-}Hole Masses:} 
 Black-hole X-ray binaries with dynamical mass measurements provide the only secure measurements of black\ilya{-}hole masses other than the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses for the lightest low-mass X-ray binaries (with a possible mass gap between neutron\ilya{-}star and black\ilya{-}hole masses) to \ilya{$\gtrsim 20\, M_\odot$} for the heaviest high-mass X-ray binaries.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses certain to exceed \ilya{$\simeq 15\, M_\odot$}.  The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will \ilya{substitute into merging binaries and ultimately be observable} as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
-
-\begin{figure}
-	\centering
-	\includegraphics[width=0.99\textwidth]{Graveyard.png}
-	\caption{\label{fig:BHmasses}  The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
-\end{figure}
 
 
 \textbf{Black\ilya{-}Hole Spin Magnitudes:} Black\ilya{-}hole X-ray binaries also provide an opportunity for measuring 
@@ -469,12 +476,11 @@ The future of gravitational-wave astronomy holds the thrilling prospect of addre
 
 
 \section*{Acknowledgements}
-We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, and Thomas Tauris for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.
+We would like to thank Christopher Berry, Cole Miller, Fred Rasio, Dorottya Sz\'{e}csi, Thomas Tauris, and Vicky Kalogera for comments that significantly improved this manuscript, and Lev Yungelson and Ed van den Heuvel for providing a historical perspective.
 
-IM is grateful to the students who contributed to building COMPAS (Jim Barrett, Sebastian Gaebel, Coenraad Neijssel, Simon Stevenson, Alejandro Vigna G\'{o}mez) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and especially Selma de Mink).  Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}. Thanks also to  Will Farr, Vicky Kalogera and Gijs Nelemans for stimulating discussions spanning many years.  \resp{Parts of this research were supported by the Australian Research Council Centre of Excellence for Gravitational Wave Discovery (OzGrav), through project number CE170100004.  IM is a recipient of the Australian Research Council Future Fellowship FT190100574.}
+IM is grateful to the students who contributed to building COMPAS (Jim Barrett, Sebastian Gaebel, Coenraad Neijssel, Simon Stevenson, Alejandro Vigna G\'{o}mez) and external collaborators (including Stephen Justham, Philipp Podsiadlowski, and especially Selma de Mink).  \ilya{Coenraad Neijssel deserves additional gratitude for assistance with figures \ref{fig:Rmax} and \ref{fig:BHremnant}.} Thanks also to  Will Farr, Vicky Kalogera and Gijs Nelemans for stimulating discussions spanning many years.  Parts of this research were supported by the Australian Research Council Centre of Excellence for Gravitational Wave Discovery (OzGrav), through project number CE170100004.  IM is a recipient of the Australian Research Council Future Fellowship FT190100574.
 
 AF is grateful for the astro-tourism.
-%\end{acknowledgements}
 
 \section*{References}
 %\bibliographystyle{hapj}
