Through most of 2.1

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -25629,6 +25629,25 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{RomeroShaw:2020GW190521,
+       author = {{Romero-Shaw}, Isobel and {Lasky}, Paul D. and {Thrane}, Eric and {Calder{\'o}n Bustillo}, Juan},
+        title = "{GW190521: Orbital Eccentricity and Signatures of Dynamical Formation in a Binary Black Hole Merger Signal}",
+      journal = {\apjl},
+     keywords = {Black holes, Compact objects, High energy astrophysics, Dynamical evolution, Eccentricity, Gravitational wave astronomy, Gravitational waves, Gravitational wave sources, 162, 288, 739, 421, 441, 675, 678, 677, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = nov,
+       volume = {903},
+       number = {1},
+          eid = {L5},
+        pages = {L5},
+          doi = {10.3847/2041-8213/abbe26},
+archivePrefix = {arXiv},
+       eprint = {2009.04771},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...903L...5R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Ihm:2006,
        author = {{Ihm}, Catherine Mia and {Kalogera}, Vassiliki and
@@ -30291,7 +30310,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Galaudag:2021,
+@ARTICLE{Galaudage:2021,
        author = {{Galaudage}, Shanika and {Talbot}, Colm and {Nagar}, Tushar and {Jain}, Deepnika and {Thrane}, Eric and {Mandel}, Ilya},
         title = "{Building better spin models for merging binary black holes: Evidence for non-spinning and rapidly spinning nearly aligned sub-populations}",
       journal = {arXiv e-prints},
@@ -30750,3 +30769,54 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{FordMcKernan:2021,
+       author = {{Ford}, K.~E. Saavik and {McKernan}, Barry},
+        title = "{Binary Black Hole Merger Rates in AGN Disks versus Nuclear Star Clusters: Loud beats Quiet}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = sep,
+          eid = {arXiv:2109.03212},
+        pages = {arXiv:2109.03212},
+archivePrefix = {arXiv},
+       eprint = {2109.03212},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210903212F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Menon:2021,
+       author = {{Menon}, Athira and {Langer}, Norbert and {de Mink}, Selma E. and {Justham}, Stephen and {Sen}, Koushik and {Sz{\'e}csi}, Dorottya and {de Koter}, Alex and {Abdul-Masih}, Michael and {Sana}, Hugues and {Mahy}, Laurent and {Marchant}, Pablo},
+        title = "{Detailed evolutionary models of massive contact binaries - I. Model grids and synthetic populations for the Magellanic Clouds}",
+      journal = {\mnras},
+     keywords = {binaries: close, binaries: spectroscopic, stars: early-type, stars: evolution, stars: fundamental parameters, stars: fundamental, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = nov,
+       volume = {507},
+       number = {4},
+        pages = {5013-5033},
+          doi = {10.1093/mnras/stab2276},
+archivePrefix = {arXiv},
+       eprint = {2011.13459},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.507.5013M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{AbdulMasih:2021,
+       author = {{Abdul-Masih}, Michael and {Sana}, Hugues and {Hawcroft}, Calum and {Almeida}, Leonardo A. and {Brands}, Sarah A. and {de Mink}, Selma E. and {Justham}, Stephen and {Langer}, Norbert and {Mahy}, Laurent and {Marchant}, Pablo and {Menon}, Athira and {Puls}, Joachim and {Sundqvist}, Jon},
+        title = "{Constraining the overcontact phase in massive binary evolution. I. Mixing in V382 Cyg, VFTS 352, and OGLE SMC-SC10 108086}",
+      journal = {\aap},
+     keywords = {stars: massive, binaries: spectroscopic, binaries: close, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jul,
+       volume = {651},
+          eid = {A96},
+        pages = {A96},
+          doi = {10.1051/0004-6361/202040195},
+archivePrefix = {arXiv},
+       eprint = {2104.07621},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...651A..96A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
