--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -156,24 +156,30 @@ The gravitational-wave signature encodes the properties of the merging binary bl
 However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy dataset.   For the heaviest black-hole binaries such as GW150914 and GW190521, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately because the latest stage of the merger waveform, the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of current gravitational-wave detectors.  For lower-mass black-hole binaries, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of frequency evolution during the earlier inspiral phase of the waveform.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the gravitational-wave phase evolution during inspiral at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black-hole spins \citep[e.g.,][]{PoissonWill:1995,Hannam:2013}.  
 
 \subsubsection{Information extracted from the observed gravitational-wave signals}\label{sec:GWevents}
-%We list the parameters of the black\ilya{-}hole binaries observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
 
-\textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  The masses appear to be roughly uniformly distributed over this range.  However, there is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  While the existing observations are not sufficient to accurately determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of \ilya{$M^{-2.3_{-1.4}^{+1.3}}$} \citep{BBH:O1,GW170104}, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates, which are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW170104}.   
+The masses of the black-hole binaries observed to date are shown in figure \ref{fig:BHmasses}, along with masses inferred from X-ray binary observations. Specific system properties are discussed below.
 
-\ref{fig:BHmasses}
 \begin{figure}
 	\centering
 	\includegraphics[width=0.99\textwidth]{Graveyard.png}
-	\caption{\label{fig:BHmasses}  \ilya{To update} The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
+	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron stars GW170817 and GW190425 (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky and Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
 \end{figure}
 
-\textbf{Mass Ratios:} While all binary black holes observed to date are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
+\textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-2.6}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $33 M_\odot$.  The vast majority of merging binary black holes, $\approx 97\%$, have both companion masses below $45 M_\odot$ \citep{GWTC2:pop}.   
 
-\textbf{Black\ilya{-}Hole Spins:} Individual black\ilya{-}hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum --- is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, $\chi_\textrm{eff}$ is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
+The vast majority of observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios could still be as extreme as $4:1$ in some cases.  Two observed events, GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  
+
+\textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
 
 \textbf{Distances and Sky Locations:} All of the observed \ilya{binary black hole} signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$), \ilya{consistent with the detector sensitivity during the first two observing runs of advanced LIGO}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localized to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
+\textbf{Eccentricity:}
+
+\cite{RomeroShaw:2020GW190521}
+
 \textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GW170104}.
+
+\textbf{Merger Rate:} The uncertainty in the binary black hole mass distribution is relayed into the uncertainty on the inferred merger rate: $23.9^{+14.3}_{-8.6}$ Gpc$^{-3}$ yr$^{-1}$.  There is tentative evidence that the merger rate increases with redshift \citep{GWTC2:pop}.  
 
 \subsection{Electromagnetic observations}
 
